# AbletonBridge

./: .gitignore  CHANGELOG.md  README.md  installation_process.txt  pyproject.toml
AbletonBridge_Remote_Script/: __init__.py
AbletonBridge_Remote_Script/handlers/: browser.py  tracks.py
M4L_Device/: m4l_bridge.js
MCP_Server/: __init__.py  constants.py  instructions.py  server.py  state.py
MCP_Server/connections/: ableton.py  extensions_sdk.py  m4l.py
MCP_Server/dashboard/: html.py  server.py
MCP_Server/midi_cc/: arturia_analog_lab.json  arturia_cs80_v.json  arturia_opxa_v.json  arturia_piano_v.json  ni_massive_x.json  ni_scarbee_bass.json  ni_symphony_brass.json
MCP_Server/tools/: devices.py  midi_cc.py  tracks.py
cowork-plugin/: .mcp.json  README.md
cowork-plugin/.claude-plugin/: plugin.json
cowork-plugin/skills/compose/: SKILL.md
cowork-plugin/skills/compose/references/: creative-tools.md
cowork-plugin/skills/deep-control/: SKILL.md
cowork-plugin/skills/deep-control/references/: m4l-tools.md
cowork-plugin/skills/mix/: SKILL.md
cowork-plugin/skills/mix/references/: mixer-and-devices.md
cowork-plugin/skills/session/: SKILL.md
docs/: extensions_sdk_bridge.md
