[project]
name = "ableton-bridge"
version = "4.0.6"
description = "AbletonBridge — Ableton Live integration through the Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "William De Simone", email = "hidingwillmusic@outlook.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "mido>=1.3",
    "python-rtmidi>=1.5",
]

[project.optional-dependencies]
midi_cc = [
    "mido>=1.3",
    "python-rtmidi>=1.5",
]
elevenlabs = [
    "elevenlabs>=0.2.26",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0",
    "rapidfuzz",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
ableton-bridge = "MCP_Server.server:main"
elevenlabs-mcp = "elevenlabs_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["MCP_Server*", "elevenlabs_mcp"]

[tool.setuptools.package-data]
MCP_Server = ["browser_cache_seed.json", "midi_cc/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.urls]
"Homepage" = "https://github.com/WilliamDeSimone/AbletonBridge"
"Bug Tracker" = "https://github.com/WilliamDeSimone/AbletonBridge/issues"
